# stealth-reader

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
src/: app.ts  reader.ts  settings.ts  style.css  tabs.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  reader.rs  state.rs  tray.rs
tests/: startup-order.test.mjs
